add meta viewport

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<head></head>
+<head><meta name="viewport" content="width=device- 
+    width, initial-scale=1">
+<title>Recyclopedia — Massachusetts</title></head>
 <body>
 
 <div id="fb-root"></div>
